<resources>
    <string name="app_name">CuriousKitty</string>
    <string name="start_test_button">Start Quiz</string>
    <string name="Quizz_1">Quizz_1</string>
    <string name="Quizz_2">Quizz_2</string>
    <string name="Quizz_3">Quizz_3</string>
    <string name="quizz_question">Questions</string>

    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="cheat_button">Cheat</string>
    <string name="next_button">Next</string>
    <string name="incorrect_toast">SORRY... Wrong answer!!!</string>
    <string name="correct_toast">Yay... Correct answer!!!</string>
    <string name="cheat_toast">Cheating is injurious to health!</string>
    <string name="question">Istanbul is in Turkey</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>
