<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_splash_screen"
    android:background="@color/off_white"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation ="vertical">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/splash_image" />

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Quiz for Curious Kitties ..."
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="30dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Quizz"
            android:textSize= "16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/checkBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Quizz_1" />

        <RadioButton
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quizz_2" />

        <RadioButton
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quizz_3" />

        <Button
            android:id="@+id/Start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"

            android:text="@string/start_test_button" />


    </LinearLayout>

</RelativeLayout>